Use Integer.valueOf
To make use of JVM cache.